[tool.poetry]
name = "mts-mixers"
version = "0.1.0"
description = "MTS-Mixers: Multivariate Time Series Forecasting via Factorized Temporal and Channel Mixing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "data_provider"}, {include = "exp"}, {include = "layers"}, {include = "models"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.8"
einops = "^0.4.1"
matplotlib = "^3.1.0"
numpy = "^1.21.3"
pandas = "^1.3.0"
scikit-learn = "^1.2.2"
# torch = "^1.10.1"  # Temporarily commented out due to ARM64 compatibility issues

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry.scripts]
test = "pytest:main"
tests = "pytest:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=data_provider",
    "--cov=exp",
    "--cov=layers",
    "--cov=models",
    "--cov=utils",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["data_provider", "exp", "layers", "models", "utils"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
    "*/.virtualenv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"